[project]
name = "owl-ranger"
version = "0.1.0"
description = "Automated data collection for OWL payloads"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyowl",
    "numpy",
    "tqdm",
    "pyserial",
    "pandas",
    "wakepy>=1.0.0",
]

[project.optional-dependencies]
qualisys = [
    "qtm-rt>=3.0.2",
]

[tool.uv.sources]
pyowl = { git = "https://github.com/sedlak477/pyowl.git" }
